# be-music-toolbox-tauri

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  eslint.config.js  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: app.html  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  options.rs
src-tauri/src/fs/: rawpack.rs
src-tauri/src/options/: bms.rs  bms_event.rs  fs.rs  pack.rs  rawpack.rs  root.rs  root_bigpack.rs  root_event.rs  work.rs
src/lib/components/: StarryBackground.svelte
src/routes/: +layout.svelte  +page.svelte
