[package]
name = "bms-resource-toolbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bms_resource_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Common dependencies
smol = "2"
sha3 = "0.10"
num_cpus = "1"
futures = "0.3"
sysinfo = { version = "0.37", default-features = false, features = ["disk"] }
regex = "1"
once_cell = "1"

# BMS
bms-rs = { version = "0.10.1", features = ["bmson"] }
encoding_rs = "0.8"

# Zip
zip = "5"
sevenz-rust = "0.6"
unrar = "0.5"

# FS
which = "8"
strsim = "0.11"
xlsxwriter = "0.6"

# GUI
clap = { version = "4", features = ["derive"] }
blocking = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Tempfile
tempfile = "3"
